# BAMdash

./: .gitignore  README.md  example.html  pyproject.toml  setup.py
.github/workflows/: deploy.yaml
bamcov/: __init__.py  __main__.py  command.py  requirements.txt
bamcov/scripts/: config.py  data.py  plotting.py
bamdash/: __init__.py  command.py
bamdash/scripts/: config.py  data.py  plotting.py
