[build-system]
requires = ["setuptools >= 65", "wheel >= 0.38"]
build-backend = "setuptools.build_meta"

[project]
name = 'bamdash'
version = '0.4.5'
description = 'Create a interactive coverage plot dashboard from bam files and add gb, vcf and bed tracks'
keywords = ['pcr, tiled pcr, primer-tiling, qpcr, primer design']
dependencies = ["kaleido>=0.2.1", "pandas>=1.4.4", "plotly>=5.17.0", "pysam>=0.21.0", "biopython>=1.79"]
requires-python = '>=3.9,<3.14'
authors = [{name = 'Jonas Fuchs', email = 'jonas.fuchs@uniklinik-freiburg.de'}]
maintainers = [{name = 'Jonas Fuchs', email = 'jonas.fuchs@uniklinik-freiburg.de'}]
readme = 'README.md'
license = {file = 'LICENSE'}
classifiers = [
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Operating System :: OS Independent',
]

[project.scripts]
bamdash = "bamdash.command:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ['bamdash*']
namespaces = false
